Expando collapse positioning fix for mobile

--- a/css/screen.css
+++ b/css/screen.css
@@ -204,32 +204,28 @@ header {
     #expando-wrapper > div ul {
       margin-left: 10px; }
   /* line 135, ../sass/_style.sass */
-  #expando-wrapper .collapse {
-    position: absolute;
-    left: -15px; }
-    /* line 138, ../sass/_style.sass */
-    #expando-wrapper .collapse a[href] {
-      color: #333333;
-      text-decoration: none;
-      -webkit-transition: none;
-      -moz-transition: none;
-      -o-transition: none;
-      transition: none; }
-      /* line 142, ../sass/_style.sass */
-      #expando-wrapper .collapse a[href]:hover {
-        background: none; }
+  #expando-wrapper .collapse a[href] {
+    color: #333333;
+    text-decoration: none;
+    -webkit-transition: none;
+    -moz-transition: none;
+    -o-transition: none;
+    transition: none; }
+    /* line 139, ../sass/_style.sass */
+    #expando-wrapper .collapse a[href]:hover {
+      background: none; }
 
-/* line 146, ../sass/_style.sass */
+/* line 143, ../sass/_style.sass */
 #skills .set {
   margin-bottom: 10px; }
-  /* line 148, ../sass/_style.sass */
+  /* line 145, ../sass/_style.sass */
   #skills .set:last-child {
     margin-bottom: 0; }
 
-/* line 153, ../sass/_style.sass */
+/* line 150, ../sass/_style.sass */
 div[data-picture] {
   text-align: center; }
-  /* line 155, ../sass/_style.sass */
+  /* line 152, ../sass/_style.sass */
   div[data-picture] > img {
     width: 100%;
     max-width: 100%;
@@ -237,33 +233,38 @@ div[data-picture] {
 
 /* Hiding and displaying elements with media queries */
 @media screen and (max-width: 480px) {
-  /* line 161, ../sass/_style.sass */
+  /* line 158, ../sass/_style.sass */
   .hidden-phone {
     display: none !important; } }
 
 @media screen and (min-width: 481px) and (max-width: 1024px) {
-  /* line 165, ../sass/_style.sass */
+  /* line 162, ../sass/_style.sass */
   .hidden-tablet {
     display: none !important; } }
 
 @media screen and (min-width: 1025px) {
-  /* line 169, ../sass/_style.sass */
+  /* line 166, ../sass/_style.sass */
   .hidden-desktop {
     display: none !important; } }
 
 /* Tablets and larger screens */
 @media screen and (min-width: 481px) {
-  /* line 176, ../sass/_style.sass */
+  /* line 173, ../sass/_style.sass */
   header p {
     text-align: justify; }
 
-  /* line 179, ../sass/_style.sass */
+  /* line 176, ../sass/_style.sass */
   .text {
     padding: 10px;
-    min-width: 15em; } }
+    min-width: 15em; }
+
+  /* line 180, ../sass/_style.sass */
+  .collapse a[href] {
+    position: absolute;
+    left: -15px; } }
 /* Desktop-only styles */
 @media screen and (min-width: 1025px) {
-  /* line 185, ../sass/_style.sass */
+  /* line 186, ../sass/_style.sass */
   a[href] {
     color: black;
     text-decoration: underline;
@@ -287,31 +288,31 @@ div[data-picture] {
       -o-border-radius: 3px;
       border-radius: 3px; }
 
-  /* line 187, ../sass/_style.sass */
+  /* line 188, ../sass/_style.sass */
   div.project {
     display: table; }
-    /* line 189, ../sass/_style.sass */
+    /* line 190, ../sass/_style.sass */
     div.project .row {
       display: table-row; }
-      /* line 191, ../sass/_style.sass */
+      /* line 192, ../sass/_style.sass */
       div.project .row > div {
         display: table-cell;
         vertical-align: middle; }
-        /* line 194, ../sass/_style.sass */
+        /* line 195, ../sass/_style.sass */
         div.project .row > div[data-picture] {
           width: 66%; }
-          /* line 196, ../sass/_style.sass */
+          /* line 197, ../sass/_style.sass */
           div.project .row > div[data-picture]:nth-child(even) {
             text-align: right; }
-          /* line 198, ../sass/_style.sass */
+          /* line 199, ../sass/_style.sass */
           div.project .row > div[data-picture] img {
             margin-bottom: -7px; }
 
-  /* line 203, ../sass/_style.sass */
+  /* line 204, ../sass/_style.sass */
   header a[href]:hover {
     background: #a3ff4d;
     color: #333333; }
-  /* line 206, ../sass/_style.sass */
+  /* line 207, ../sass/_style.sass */
   header a[href].on {
     background: #a3ff4d;
     color: #333333;
