--- a/sass/_style.sass
+++ b/sass/_style.sass
@@ -132,15 +132,12 @@ header
         position: relative
         ul
             margin-left: 10px
-    .collapse
-        position: absolute
-        left: -15px
-        a[href]
-            color: $text-color
-            text-decoration: none
-            +transition(none)
-            &:hover
-                background: none
+    .collapse a[href]
+        color: $text-color
+        text-decoration: none
+        +transition(none)
+        &:hover
+            background: none
 
 
 #skills .set
@@ -179,6 +176,10 @@ div[data-picture]
     .text
         padding: 10px
         min-width: 15em
+
+    .collapse a[href]
+        position: absolute
+        left: -15px
 
 /* Desktop-only styles */
 @media screen and (min-width: $desktop-min)
